--- a/Views/DashboardView.axaml
+++ b/Views/DashboardView.axaml
@@ -37,8 +37,7 @@
 				FontWeight="SemiBold"
 				FontFamily="Inter"
 				Text="Dashboard"
-				Margin="90,30"
-			/>
+				Margin="90,30"/>
 		</StackPanel>
 		<ScrollViewer>
 			<StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="48,0,48,24" Spacing="16">
@@ -59,8 +58,7 @@
 														Width="23"
 														Height="23"
 														Path="/Assets/DashboardView/philippine-peso-icon.svg"
-														Opacity="0.5"
-												/>
+														Opacity="0.5"/>
 												</dashboard:OverviewCard.Icon>
 											</dashboard:OverviewCard>
 											<dashboard:OverviewCard
@@ -71,8 +69,7 @@
 													<Svg
 														Width="23"
 														Height="23"
-														Path="/Assets/DashboardView/member-subscriptions-icon.svg"
-												/>
+														Path="/Assets/DashboardView/member-subscriptions-icon.svg"/>
 												</dashboard:OverviewCard.Icon>
 											</dashboard:OverviewCard>
 											<dashboard:OverviewCard
@@ -83,8 +80,7 @@
 													<Svg
 														Width="23"
 														Height="23"
-														Path="/Assets/DashboardView/sales-icon.svg"
-												/>
+														Path="/Assets/DashboardView/sales-icon.svg"/>
 												</dashboard:OverviewCard.Icon>
 											</dashboard:OverviewCard>
 											<dashboard:OverviewCard
@@ -95,8 +91,7 @@
 													<Svg
 														Width="23"
 														Height="23"
-														Path="/Assets/DashboardView/active-now-icon.svg"
-												/>
+														Path="/Assets/DashboardView/active-now-icon.svg"/>
 												</dashboard:OverviewCard.Icon>
 											</dashboard:OverviewCard>
 										</UniformGrid>
@@ -118,8 +113,7 @@
 														DockPanel.Dock="Top"
 														FontSize="17"
 														FontWeight="Bold"
-														Text="2025 Sales Overview"
-												/>
+														Text="2025 Sales Overview"/>
 													<ComboBox
 														Margin="20,-35,30,0"
 														HorizontalAlignment="Right"
@@ -142,10 +136,8 @@
 														Series="{Binding Series}"
 														XAxes="{Binding XAxes}"
 														YAxes="{Binding YAxes}"
-														TooltipTextSize="14"
-												/>
+														TooltipTextSize="14"/>
 												</DockPanel>
-
 											</Border>
 											<Border
 												Grid.Column="1"
@@ -167,7 +159,7 @@
 																FontSize="17"
 																FontWeight="Bold"
 																Text="Recent Sales" />
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding SalesSummary}" />
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding SalesSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding RecentSales}">
@@ -257,8 +249,8 @@
 														<TextBlock
 																FontSize="17"
 																FontWeight="Bold"
-																Text="Upcoming Training Sessions" />
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding TrainingSessionsSummary}" />
+																Text="Upcoming Training Sessions"/>
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding TrainingSessionsSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding UpcomingTrainingSessions}">
@@ -356,8 +348,8 @@
 														<TextBlock
 																FontSize="17"
 																FontWeight="Bold"
-																Text="Recent Logs" />
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding RecentLogsSummary}" />
+																Text="Recent Logs"/>
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding RecentLogsSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding RecentLogs}">
@@ -365,7 +357,7 @@
 															<!-- Define the item container style -->
 															<ItemsControl.ItemsPanel>
 																<ItemsPanelTemplate>
-																	<StackPanel Spacing="24" />
+																	<StackPanel Spacing="24"/>
 																</ItemsPanelTemplate>
 															</ItemsControl.ItemsPanel>
 
