--- a/Views/DashboardView.axaml
+++ b/Views/DashboardView.axaml
@@ -1,20 +1,19 @@
-﻿<UserControl
-  x:Class="AHON_TRACK.Views.DashboardView"
-  xmlns="https://github.com/avaloniaui"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
-  xmlns:avalonia="clr-namespace:LiveChartsCore.SkiaSharpView.Avalonia;assembly=LiveChartsCore.SkiaSharpView.Avalonia"
-  xmlns:system="clr-namespace:System;assembly=System.Runtime"
-  xmlns:viewModels="clr-namespace:AHON_TRACK.ViewModels"
-  xmlns:dashboard="clr-namespace:AHON_TRACK.Components.Dashboard"
-  xmlns:func="using:AHON_TRACK.Functionalities"
-  xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Svg.Controls.Avalonia"
-  d:DesignHeight="2080"
-  d:DesignWidth="1666"
-  x:DataType="viewModels:DashboardViewModel"
-  mc:Ignorable="d">
+<UserControl
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	x:Class="AHON_TRACK.Views.DashboardView"
+	x:DataType="vm:DashboardViewModel"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:vm="using:AHON_TRACK.ViewModels"
+	xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
+	xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Svg.Controls.Avalonia"
+	xmlns:avalonia="clr-namespace:LiveChartsCore.SkiaSharpView.Avalonia;assembly=LiveChartsCore.SkiaSharpView.Avalonia"
+	xmlns:converters="clr-namespace:AHON_TRACK.Converters"
+	xmlns:dashboard="clr-namespace:AHON_TRACK.Components.Dashboard"
+	d:DesignWidth="2080"
+	d:DesignHeight="1666"
+	mc:Ignorable="d">
 
 	<UserControl.Resources>
 		<SolidColorBrush x:Key="MutedColor" Color="#2C2F36" Opacity="0.70"/>
@@ -120,8 +119,8 @@
 														HorizontalContentAlignment="Center"
 														Width="100"
 														DockPanel.Dock="Top"
-														ItemsSource="{Binding AvailableYears}"
-														SelectedIndex="{Binding SelectedYearIndex}">
+														ItemsSource="{CompiledBinding AvailableYears}"
+														SelectedIndex="{CompiledBinding SelectedYearIndex}">
 														<ComboBoxItem>2025</ComboBoxItem>
 														<ComboBoxItem>2026</ComboBoxItem>
 														<ComboBoxItem>2027</ComboBoxItem>
@@ -133,9 +132,9 @@
 														Height="445"
 														Name="CartesianChart1"
 														Margin="12,0,12,12"
-														Series="{Binding Series}"
-														XAxes="{Binding XAxes}"
-														YAxes="{Binding YAxes}"
+														Series="{CompiledBinding Series}"
+														XAxes="{CompiledBinding XAxes}"
+														YAxes="{CompiledBinding YAxes}"
 														TooltipTextSize="14"/>
 												</DockPanel>
 											</Border>
@@ -149,7 +148,7 @@
 												CornerRadius="{DynamicResource 2XlCornerRadius}">
 												<DockPanel x:Name="RecentSalesCard" Height="500">
 													<DockPanel.Resources>
-														<func:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
+														<converters:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
 													</DockPanel.Resources>
 													<StackPanel
 														Margin="40,25"
@@ -159,10 +158,10 @@
 																FontSize="17"
 																FontWeight="Bold"
 																Text="Recent Sales" />
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding SalesSummary}"/>
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{CompiledBinding SalesSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding RecentSales}">
+														<ItemsControl Margin="40,0,24,24" ItemsSource="{CompiledBinding RecentSales}">
 
 															<!-- Define the item container style -->
 															<ItemsControl.ItemsPanel>
@@ -185,17 +184,17 @@
 																				Width="36"
 																				Height="36"
 																				VerticalAlignment="Center"
-																				Source="{Binding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
+																				Source="{CompiledBinding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
 																			<StackPanel Margin="15,0">
 																				<TextBlock
 																					Classes="Small"
 																					FontSize="15"
 																					FontWeight="SemiBold"
-																					Text="{Binding CustomerName}"/>
+																					Text="{CompiledBinding CustomerName}"/>
 																				<TextBlock
 																					Classes="Caption Muted"
 																					FontSize="13"
-																					Text="{Binding CustomerType}"/>
+																					Text="{CompiledBinding CustomerType}"/>
 																			</StackPanel>
 																		</StackPanel>
 
@@ -206,7 +205,7 @@
 																			HorizontalAlignment="Left"
 																			FontSize="15"
 																			FontWeight="SemiBold"
-																			Text="{Binding ProductName}"/>
+																			Text="{CompiledBinding ProductName}"/>
 
 																		<!-- Amount Column -->
 																		<TextBlock
@@ -216,7 +215,7 @@
 																			FontSize="15"
 																			FontWeight="Bold"
 																			Foreground="{DynamicResource SuccessColor}"
-																			Text="{Binding FormattedAmount}"/>
+																			Text="{CompiledBinding FormattedAmount}"/>
 																	</Grid>
 																</DataTemplate>
 															</ItemsControl.ItemTemplate>
@@ -240,7 +239,7 @@
 												CornerRadius="{DynamicResource 2XlCornerRadius}">
 												<DockPanel Height="500">
 													<DockPanel.Resources>
-														<func:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
+														<converters:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
 													</DockPanel.Resources>
 													<StackPanel
 														Margin="40,25"
@@ -250,10 +249,10 @@
 																FontSize="17"
 																FontWeight="Bold"
 																Text="Upcoming Training Sessions"/>
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding TrainingSessionsSummary}"/>
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{CompiledBinding TrainingSessionsSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding UpcomingTrainingSessions}">
+														<ItemsControl Margin="40,0,24,24" ItemsSource="{CompiledBinding UpcomingTrainingSessions}">
 															<ItemsControl.ItemsPanel>
 																<ItemsPanelTemplate>
 																	<StackPanel Spacing="24"/>
@@ -272,17 +271,17 @@
 																				Width="36"
 																				Height="36"
 																				VerticalAlignment="Center"
-																				Source="{Binding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
+																				Source="{CompiledBinding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
 																			<StackPanel Margin="15,0">
 																				<TextBlock
 																					Classes="Small"
 																					FontSize="15"
 																					FontWeight="SemiBold"
-																					Text="{Binding ClientName}"/>
+																					Text="{CompiledBinding ClientName}"/>
 																				<TextBlock
 																					Classes="Caption Muted"
 																					FontSize="13"
-																					Text="{Binding MembershipType}"/>
+																					Text="{CompiledBinding MembershipType}"/>
 																			</StackPanel>
 																		</StackPanel>
 
@@ -293,7 +292,7 @@
 																			HorizontalAlignment="Left"
 																			FontSize="15"
 																			FontWeight="SemiBold"
-																			Text="{Binding TrainingType}"/>
+																			Text="{CompiledBinding TrainingType}"/>
 
 																		<!-- Location Column -->
 																		<TextBlock
@@ -302,7 +301,7 @@
 																			HorizontalAlignment="Left"
 																			FontSize="15"
 																			FontWeight="SemiBold"
-																			Text="{Binding Location}"/>
+																			Text="{CompiledBinding Location}"/>
 
 																		<!-- Time Slot Column -->
 																		<TextBlock
@@ -311,7 +310,7 @@
 																			HorizontalAlignment="Left"
 																			FontSize="15"
 																			FontWeight="Bold"
-																			Text="{Binding TimeSlot}"/>
+																			Text="{CompiledBinding TimeSlot}"/>
 
 																		<!-- Date Column -->
 																		<TextBlock
@@ -321,7 +320,7 @@
 																			FontSize="15"
 																			FontWeight="Bold"
 																			Foreground="{DynamicResource SuccessColor}"
-																			Text="{Binding FormattedDate}"/>
+																			Text="{CompiledBinding FormattedDate}"/>
 																	</Grid>
 																</DataTemplate>
 															</ItemsControl.ItemTemplate>
@@ -339,7 +338,7 @@
 												CornerRadius="{DynamicResource 2XlCornerRadius}">
 												<DockPanel x:Name="RecentLogs" Height="500">
 													<DockPanel.Resources>
-														<func:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
+														<converters:StringToBitmapConverter x:Key="StringToBitMapConverter"/>
 													</DockPanel.Resources>
 													<StackPanel
 														Margin="40,25"
@@ -349,10 +348,10 @@
 																FontSize="17"
 																FontWeight="Bold"
 																Text="Recent Logs"/>
-														<TextBlock Classes="Caption Muted" FontSize="14" Text="{Binding RecentLogsSummary}"/>
+														<TextBlock Classes="Caption Muted" FontSize="14" Text="{CompiledBinding RecentLogsSummary}"/>
 													</StackPanel>
 													<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-														<ItemsControl Margin="40,0,24,24" ItemsSource="{Binding RecentLogs}">
+														<ItemsControl Margin="40,0,24,24" ItemsSource="{CompiledBinding RecentLogs}">
 
 															<!-- Define the item container style -->
 															<ItemsControl.ItemsPanel>
@@ -375,17 +374,17 @@
 																				Width="36"
 																				Height="36"
 																				VerticalAlignment="Center"
-																				Source="{Binding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
+																				Source="{CompiledBinding AvatarSource, Converter={StaticResource StringToBitMapConverter}}"/>
 																			<StackPanel Margin="15,0">
 																				<TextBlock
 																					Classes="Small"
 																					FontSize="15"
 																					FontWeight="SemiBold"
-																					Text="{Binding Username}"/>
+																					Text="{CompiledBinding Username}"/>
 																				<TextBlock
 																					Classes="Caption Muted"
 																					FontSize="13"
-																					Text="{Binding UserType}"/>
+																					Text="{CompiledBinding UserType}"/>
 																			</StackPanel>
 																		</StackPanel>
 
@@ -400,7 +399,7 @@
 																			TextAlignment="Right"
 																			Width="150"
 																			Foreground="{DynamicResource SuccessColor}"
-																			Text="{Binding ActionLogName}"/>
+																			Text="{CompiledBinding ActionLogName}"/>
 																	</Grid>
 																</DataTemplate>
 															</ItemsControl.ItemTemplate>
