--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,21 +1,25 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:AHON_TRACK.ViewModels"
-		xmlns:views="using:AHON_TRACK.Views"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
-		xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Svg.Controls.Avalonia"
-		xmlns:func="clr-namespace:AHON_TRACK.Functionalities"
-        mc:Ignorable="d" d:DesignWidth="1920" d:DesignHeight="1080"
-        x:Class="AHON_TRACK.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/AHON-Track-Window.ico"
-        WindowStartupLocation="CenterScreen"
-        CanResize="True"
-		SaveWindowState="True"
-        WindowState="Maximized"
-        Title="AHON TRACK">
+<Window
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:vm="using:AHON_TRACK.ViewModels"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:views="clr-namespace:AHON_TRACK.Views"
+	xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
+	xmlns:svg="clr-namespace:Avalonia.Svg;assembly=Svg.Controls.Avalonia"
+	xmlns:converters="clr-namespace:AHON_TRACK.Converters"
+	x:Class="AHON_TRACK.Views.MainWindow"
+	d:DesignWidth="1920"
+	d:DesignHeight="1080"
+	x:DataType="vm:MainWindowViewModel"
+	mc:Ignorable="d"
+	Title="AHON TRACK"
+	Width="1920"
+	Height="1080"
+	Icon="/Assets/avalonia-logo.ico"
+	WindowStartupLocation="CenterScreen"
+	WindowState="Maximized"
+	CanResize="True">
 
 	<shadui:Window.LogoContent>
 		<Svg
@@ -26,8 +30,8 @@
 	</shadui:Window.LogoContent>
 
 	<shadui:Window.Hosts>
-		<shadui:ToastHost Manager="{Binding ToastManager}" ZIndex="1000"/>
-		<shadui:DialogHost Manager="{Binding DialogManager}" Owner="{Binding RelativeSource={RelativeSource AncestorType=shadui:Window}}"/>
+		<shadui:ToastHost Manager="{CompiledBinding ToastManager}" ZIndex="1000"/>
+		<shadui:DialogHost Manager="{CompiledBinding DialogManager}" Owner="{Binding RelativeSource={RelativeSource AncestorType=shadui:Window}}"/>
 	</shadui:Window.Hosts>
 
 	<Window.Resources>
@@ -53,11 +57,11 @@
 				Grid.Column="0"
 				Width="237"
 				MinWidth="60"
-				Padding="{Binding #Toggler.IsChecked, Converter={x:Static func:BooleanConverters.SidebarPadding}}"
+				Padding="{CompiledBinding #Toggler.IsChecked, Converter={x:Static converters:BooleanConverters.SidebarPadding}}"
                 BorderBrush="{DynamicResource BorderColor30}"
                 BorderThickness="0,0,1,0"
-				CurrentRoute="{Binding CurrentRoute}"
-                Expanded="{Binding #Toggler.IsChecked}">
+				CurrentRoute="{CompiledBinding CurrentRoute}"
+                Expanded="{CompiledBinding #Toggler.IsChecked}">
 				<shadui:Sidebar.ExpandEasing>
 					<shadui:EaseInOutBack BounceIntensity="Soft" />
 				</shadui:Sidebar.ExpandEasing>
@@ -68,7 +72,7 @@
                         Width="32"
                         Height="32"
                         Padding="8"
-                        HorizontalAlignment="{Binding #Toggler.IsChecked, Converter={x:Static func:BooleanConverters.SidebarTogglerHorizontalAlignment}}"
+                        HorizontalAlignment="{CompiledBinding #Toggler.IsChecked, Converter={x:Static converters:BooleanConverters.SidebarTogglerHorizontalAlignment}}"
                         CornerRadius="{DynamicResource LgCornerRadius}"
                         Theme="{DynamicResource SideTogglerTheme}">
 						<Viewbox>
@@ -82,12 +86,12 @@
 				<StackPanel Spacing="4">
 					<shadui:SidebarItemLabel AsSeparator="True" Text="Get Started" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenDashboardCommand}"
+						Command="{CompiledBinding OpenDashboardCommand}"
 						Route="dashboard"
 						Content="Dashboard"
 						FontSize="15"
 						IsChecked="True"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Dashboard'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Dashboard'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -98,11 +102,11 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenManageEmployeesCommand}"
+						Command="{CompiledBinding OpenManageEmployeesCommand}"
 						Route="manageEmployees"
 						Content="Manage Employees"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Manage Employees'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Manage Employees'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -117,10 +121,10 @@
                         AsSeparator="True"
                         Text="Members &amp; Access" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenMemberCheckInOutCommand}"
+						Command="{CompiledBinding}"
 						Content="Member Check-in/Check-out"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Member Check-in/Check-out'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Member Check-in/Check-out'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -131,10 +135,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenManageMembershipCommand}"
+						Command="{CompiledBinding}"
 						Content="Manage Membership"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Manage Membership'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Manage Membership'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -145,10 +149,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenWalkInRegistrationCommand}"
+						Command="{CompiledBinding}"
 						Content="Walk-in Registration"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Walk-in Registration'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Walk-in Registration'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -159,10 +163,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenMemberDirectoryCommand}"
+						Command="{CompiledBinding}"
 						Content="Member Directory"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Member Directory'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Member Directory'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -177,10 +181,10 @@
                         AsSeparator="True"
                         Text="Scheduling &amp; Classes" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenTrainingSchedulesCommand}"
+						Command="{CompiledBinding}"
 						Content="Training Schedules"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Training Schedules'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Training Schedules'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -191,10 +195,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenRoomEquipmentBookingCommand}"
+						Command="{CompiledBinding}"
 						Content="Room/Equipment Booking"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Room/Equipment Booking'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Room/Equipment Booking'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -209,10 +213,10 @@
                         AsSeparator="True"
                         Text="Payments &amp; Billing" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenPaymentOverviewCommand}"
+						Command="{CompiledBinding}"
 						Content="Payment Overview"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Payment Overview'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Payment Overview'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -223,10 +227,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenOutstandingBalancesCommand}"
+						Command="{CompiledBinding}"
 						Content="Outstanding Balances"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Outstanding Balances'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Outstanding Balances'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -237,10 +241,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenPaymentHistoryCommand}"
+						Command="{CompiledBinding}"
 						Content="Payment History"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Payment History'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Payment History'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -251,10 +255,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenManageBillingCommand}"
+						Command="{CompiledBinding}"
 						Content="Manage Billing"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Manage Billing'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Manage Billing'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -269,10 +273,10 @@
                         AsSeparator="True"
                         Text="Manage Inventory" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenEquipmentInventoryCommand}"
+						Command="{CompiledBinding}"
 						Content="Equipment Inventory"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Equipment Inventory'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Equipment Inventory'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -283,10 +287,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenProductSupplementStockViewModelCommand}"
+						Command="{CompiledBinding}"
 						Content="Product/Supplement Stock"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Product/Supplement Stock'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Product/Supplement Stock'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -297,10 +301,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenSupplierManagementCommand}"
+						Command="{CompiledBinding}"
 						Content="Supplier Management"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Supplier Management'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Supplier Management'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -315,10 +319,10 @@
                         AsSeparator="True"
                         Text="Reports &amp; Analytics" FontSize="15" Foreground="{DynamicResource DestructiveColor}"/>
 					<shadui:SidebarItem
-						Command="{Binding OpenFinancialReportsCommand}"
+						Command="{CompiledBinding}"
 						Content="Financial Reports"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Financial Reports'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Financial Reports'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -329,10 +333,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenGymDemographicsCommand}"
+						Command="{CompiledBinding}"
 						Content="Gym Demographics"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Gym Demographics'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Gym Demographics'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -343,10 +347,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenEquipmentUsageReportsCommand}"
+						Command="{CompiledBinding}"
 						Content="Equipment Usage Reports"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Equipment Usage Reports'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Equipment Usage Reports'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -357,10 +361,10 @@
 						</shadui:SidebarItem.Icon>
 					</shadui:SidebarItem>
 					<shadui:SidebarItem
-						Command="{Binding OpenClassAttendanceReportsCommand}"
+						Command="{CompiledBinding}"
 						Content="Class Attendance Reports"
 						FontSize="15"
-						ToolTip.Tip="{Binding $parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.NullOrString}, ConverterParameter='Class Attendance Reports'}">
+						ToolTip.Tip="{CompiledBinding $parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.NullOrString}, ConverterParameter='Class Attendance Reports'}">
 						<shadui:SidebarItem.Icon>
 							<Viewbox>
 								<Svg
@@ -386,8 +390,8 @@
 									<shadui:Avatar
 										CornerRadius="{DynamicResource LgCornerRadius}"
 										Fallback="CN"
-										IsVisible="{Binding !$parent[shadui:Sidebar].Expanded}"
-                                        Opacity="{Binding !$parent[shadui:Sidebar].Expanded, Converter={x:Static func:BooleanConverters.Opaque}}"
+										IsVisible="{CompiledBinding !$parent[shadui:Sidebar].Expanded}"
+                                        Opacity="{CompiledBinding !$parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.Opaque}}"
 										Source="avares://AHON_TRACK/Assets/MainWindowView/user-admin.png">
 										<shadui:Avatar.Transitions>
 											<Transitions>
@@ -398,7 +402,7 @@
 									<Grid
 										Margin="0,8"
                                         ColumnDefinitions="Auto * Auto"
-                                        IsVisible="{Binding $parent[shadui:Sidebar].Expanded}">
+                                        IsVisible="{CompiledBinding $parent[shadui:Sidebar].Expanded}">
 										<shadui:Avatar
 											Width="36"
 											Height="36"
@@ -445,7 +449,7 @@
 							</shadui:MenuItemAssist.Label>
 							<Separator/>
 							<!--Show Profile: Command property missing-->
-							<MenuItem Header="View Profile" Command="{Binding OpenViewProfileCommand}">
+							<MenuItem Header="View Profile" Command="{CompiledBinding OpenViewProfileCommand}">
 								<MenuItem.Icon>
 									<Viewbox Width="16" Height="16">
 										<Svg Path="avares://AHON_TRACK/Assets/MainWindowView/show-profile-icon.svg"/>
@@ -512,7 +516,7 @@
 							</MenuItem>
 							<Separator/>
 							<!--Show Logout: Command property missing-->
-							<MenuItem Header="Logout" Foreground="{DynamicResource DestructiveColor}" Command="{Binding TryLogoutCommand}">
+							<MenuItem Header="Logout" Foreground="{DynamicResource DestructiveColor}" Command="{CompiledBinding TryLogoutCommand}">
 								<MenuItem.Icon>
 									<Viewbox Width="16" Height="16">
 										<Svg Path="avares://AHON_TRACK/Assets/MainWindowView/logout-red-icon.svg"/>
@@ -523,7 +527,7 @@
 					</Menu>
 				</shadui:Sidebar.Footer>
 			</shadui:Sidebar>
-			<TransitioningContentControl Grid.Column="1" Content="{Binding SelectedPage}"/>
+			<TransitioningContentControl Grid.Column="1" Content="{CompiledBinding SelectedPage}"/>
 		</Grid>
 	</Panel>
 </Window>
