fix(MainWindow): change the application icon from default to AHON-Track icon

--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -14,7 +14,7 @@
 	x:DataType="vm:MainWindowViewModel"
 	mc:Ignorable="d"
 	Title="AHON TRACK"
-	Icon="/Assets/avalonia-logo.ico"
+	Icon="/Assets/AHON-Track-Window.ico"
 	WindowStartupLocation="CenterScreen"
 	WindowState="Maximized"
 	CanResize="True">
